Implemented endpoint to create a new setting.
